rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h235.0_2005_H235-SECURITY-MESSAGES.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h235.0_2005_H235-SECURITY-MESSAGES.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 254, column 2]
     │
     │ 
 254 │  CryptoToken ::= CHOICE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 255 │    cryptoEncryptedToken
 256 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 257 │                                                                 OBJECT
 258 │                                                                   IDENTIFIER,
 259 │                                                               token
 260 │                                                                 ENCRYPTED
 261 │                                                                   {EncodedGeneralToken}
 262 │    },
 263 │    cryptoSignedToken
 264 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 265 │                                                                 OBJECT
 266 │                                                                   IDENTIFIER,
 267 │                                                               token
 268 │                                                                 SIGNED
 269 │                                                                   {EncodedGeneralToken}
 270 │    },
 271 │    cryptoHashedToken
 272 │      SEQUENCE-- General purpose/application specific token-- {tokenOID
 273 │                                                                 OBJECT
 274 │                                                                   IDENTIFIER,
 275 │                                                               hashedVals
 276 │                                                                 ClearToken,
 277 │                                                               token
 278 │                                                                 HASHED
 279 │                                                                   {EncodedGeneralToken}
 280 │    },
 281 │    cryptoPwdEncr         ENCRYPTED{EncodedPwdCertToken},
 282 │    ...
 283 │  }
 285 │  -- These allow the passing of session keys within the H.245 OLC structure.
 286 │  -- They are encoded as standalone ASN.1 and based as an OCTET STRING within
 287 │  -- H.245
     │
─────╯
